Styles: Fix layout issue of the home page

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,7 +1,7 @@
 /* Main Content */
 /* ========================================================================== */
 
-#main {
+#imain {
 	display: table;
 	width: 100%;
 	background: url('images/background.jpg') repeat-x;
